testsuite/tests/properties/invalid_node_builder/not_lazy/test.lkt
from common import BaseExample, FooNode

@synthetic class EmptyNode: FooNode {
}

class Example: BaseExample {
    @exported fun prop(): EmptyNode = EmptyNode.builder().build()
}
